--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,12 @@ code {
     monospace;
 }
 
-td,
-th {
-  border: 1px solid #dddddd;
+td, th {
+  border: 1px solid #f7f7f7;
   text-align: left;
   padding: 8px;
+  background: #281654;
+  color: white;
 }
 
 nav {
@@ -216,4 +217,9 @@ button.Default-Action-Button:hover {
   padding-top: 0;
   height: 100%;
   overflow-y: scroll;
+}
+table.sc-eCstlR {
+  width: 75%;
+  display: table;
+  margin: auto;
 }
