Timer workflow state.

--- a/src/index.css
+++ b/src/index.css
@@ -226,7 +226,7 @@ button.Default-Action-Button:hover {
 .Rounds-Preview {
   font-size: 20px;
   font-weight: bold;
-  color: white;
+  color: #3e94cd;
 }
 .Title-Wraper{
   padding-top:15px;
